--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,4 @@
 <h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= user.name %></p>
+<p class="lead mb-3">Welcome <%= name%></p>
+<a href="/users/listReadings" class="btn btn-primary">List Readings</a>
 <a href="/users/logout" class="btn btn-secondary">Logout</a>
