--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,4 @@
 <h1 class="mt-4 text-center">Dashboard</h1>
 <p class="lead mb-3 text-left">Welcome <%= name%></p>
-<a href="/users/listReadings" class="btn btn-primary">List Readings</a>
-<a href="/users/logout" class="btn btn-secondary">Logout</a>
+<a href="/users/listReadings" class="btn-lg btn-primary">List Readings</a>
+<a href="/users/logout" class="btn-lg ml-3 btn-secondary">Logout</a>
