--- a/views/readingDetails.ejs
+++ b/views/readingDetails.ejs
@@ -17,10 +17,10 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="">
             <h1 class="text-center mb-4">Детайли на измерване</h1>
             </div>
-            <div class="container mb-2">
+            <div class="mb-5">
                 <div>
                     <a href="/users/listReadings"> <button class="btn btn-success">Връщане</button></a>
                 <a href="/users/logout"> <button class="btn btn-danger float-right">Излизане</button></a>
@@ -28,7 +28,7 @@
 
     </header>
     <main>
-        <div class="container mt-2">
+        <div class="mt-2">
             <div class="row">
                 <label class="col-md-4">ID на измерване</label>
                 <input type="text" class="col-md-8" disabled>
