--- a/views/clients.ejs
+++ b/views/clients.ejs
@@ -18,8 +18,8 @@
         <h1 class="mt-5 mb-5 text-center">Клиент:</h1>
     </div>
     <div class="container mb-4">
-        <a href="/users/logout"> <button class="btn btn-danger float-right">Излизане</button></a>
-        <a href="/users/listReadings"> <button class="btn btn-success float">Връщане</button></a>
+        <a href="/users/logout"> <button class="btn-lg btn-danger float-right">Излизане</button></a>
+        <a href="/users/listReadings"> <button class="btn-lg btn-success float">Връщане</button></a>
     </div>
 
     <table id="clients" class="display">
