--- a/views/listReadings.ejs
+++ b/views/listReadings.ejs
@@ -18,10 +18,16 @@
         <h1 class="mt-5 mb-5 text-center">Импортирани Мерения</h1>
     </div>
     <div class="container mb-4">
-        <a href="/users/logout"> <button class="btn btn-danger float-right">Излизане</button></a>
-        <a href="/dashboard"> <button class="btn btn-success">Връщане</button></a>
+        <a href="/users/logout"> <button class="btn-lg btn-danger float-right">Излизане</button></a>
+        <a href="/dashboard"> <button class="btn-lg btn-success">Връщане</button></a>
     </div>
-
+    <form action="" method="GET">
+    <div class="mb-3">
+        От дата  <input class="ml-1" type="date" type="search"></input>
+        До дата  <input class="ml-1" type="date" type="search"></input>
+        <button type="" class="btn-primary btn-lg ml-3">Търсене</button>
+    </div>  
+</form>
     <table id="list-readings" class="display">
         <thead>
             <tr>
