--- a/views/clients.ejs
+++ b/views/clients.ejs
@@ -19,7 +19,7 @@
     </div>
     <div class="container mb-4">
         <a href="/users/logout"> <button class="btn-lg btn-danger float-right">Излизане</button></a>
-        <a href="/users/listReadings"> <button class="btn-lg btn-success float">Връщане</button></a>
+        <a href="javascript:history.back()"> <button class="btn-lg btn-success float">Връщане</button></a>
     </div>
 
     <table id="clients" class="display">
