--- a/views/readingDetails.ejs
+++ b/views/readingDetails.ejs
@@ -17,13 +17,13 @@
 
 <body>
     <header>
-        <div class="">
+        <div>
             <h1 class="text-center mb-4">Детайли на измерване</h1>
             </div>
             <div class="mb-5">
                 <div>
-                    <a href="/users/listReadings"> <button class="btn btn-success">Връщане</button></a>
-                <a href="/users/logout"> <button class="btn btn-danger float-right">Излизане</button></a>
+                    <a href="javascript:history.back()"> <button class="btn-lg btn-success">Връщане</button></a>
+                <a href="/users/logout"> <button class="btn-lg btn-danger float-right">Излизане</button></a>
             </div>
 
     </header>
