--- a/views/clients.ejs
+++ b/views/clients.ejs
@@ -28,8 +28,10 @@
                 <th>ID на отчет</th>
                 <th>Период на отчетност от</th>
                 <th>Период на отчетност до</th>
+                <th>Часова зона</th>
                 <th>Стойност в лв.</th>
                 <th>Тип на документа</th>
+                <th>ЕРП</th>
                 <th>Детайли</th>
             </tr>
         </thead>
