--- a/views/listReadings.ejs
+++ b/views/listReadings.ejs
@@ -16,33 +16,61 @@
 <body>
     <div class="container">
         <h1 class="mt-5 mb-5 text-center">Импортирани Мерения</h1>
+
+        <div class="container mb-4">
+            <a href="/users/logout"> <button class="btn-lg btn-danger float-right">Излизане</button></a>
+            <a href="javascript:history.back()"> <button class="btn-lg btn-success">Връщане</button></a>
+        </div>
+        <form action="" method="GET">
+            <div class="row">
+                <div class="col-md-4"> От дата <input id="fromDate" name="fromDate" class="ml-2" type="date"
+                        type="search"></input>
+                </div>
+                <div class="col-md-4"> До дата <input id="toDate" name="toDate" class="ml-2" type="date"
+                        type="search"></input></div>
+                <div class="col-md-4"> ЕРП <select id="ERP" name="ERP">
+                        <option value="CEZ">CEZ</option>
+                        <option value="EnergoPRO">EnergoPRO</option>
+                        <option value="EVN">EVN</option>
+                    </select></div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-4">Име на клиент <input id="nameOfClient" list="names" name="clientNames"
+                        class="ml-2" type="search"></input>
+                    <datalist id="names">
+                    </datalist>
+                </div>
+                <div class="col-md-4"> Идентификационен код <input id="clientID" name="clientID" class="ml-2" list="idList"
+                        type="search"></input>
+                    <datalist id="idList">
+                    </datalist>
+                </div>
+                <div class="col-md-4"><button type="submit" class="btn-primary btn-lg ml-3">Търсене</button></div>
+            </div>
+
+
     </div>
-    <div class="container mb-4">
-        <a href="/users/logout"> <button class="btn-lg btn-danger float-right">Излизане</button></a>
-        <a href="javascript:history.back()"> <button class="btn-lg btn-success">Връщане</button></a>
-    </div>
-    <form action="" method="GET">
-    <div class="mb-3">
-        От дата  <input class="ml-1" type="date" type="search"></input>
-        До дата  <input class="ml-1" type="date" type="search"></input>
-        <button type="" class="btn-primary btn-lg ml-3">Търсене</button>
-    </div>  
-</form>
+    </form>
     <table id="list-readings" class="display">
         <thead>
             <tr>
                 <th>ID на отчет</th>
                 <th>Клиентски номер</th>
                 <th>Идентификационен код</th>
+                <th>Име на клиент</th>
                 <th>Период на отчетност от</th>
                 <th>Период на отчетност до</th>
+                <th>Часова зона</th>
                 <th>Стойност в лв.</th>
                 <th>Тип на документа</th>
+                <th>ЕРП</th>
                 <th>Детайли</th>
             </tr>
         </thead>
         <tbody id="tBody">
         </tbody>
+        </div>
+        </div>
     </table>
     <script src="../js/list-readings.js"></script>
 </body>
