--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,6 +34,9 @@
     <link rel="stylesheet" href="../../../AdminLTE-master/plugins/summernote/summernote-bs4.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <link rel="stylesheet" href="../../../AdminLTE-master/css/layout.css">
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -67,9 +70,9 @@
             <aside class="main-sidebar sidebar-dark-primary elevation-4">
                 <!-- Brand Logo -->
                 <a href="" class="brand-link">
-                    <img src="../../../AdminLTE-master/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
+                    <img src="../../../AdminLTE-master/images/logoDatavend.png" alt="AdminLTE Logo"
                         class="brand-image img-circle elevation-3" style="opacity: .8">
-                    <span class="brand-text font-weight-light">AdminLTE 3</span>
+                    <span class="brand-text font-weight-light">Graph Project</span>
                 </a>
 
                 <!-- Sidebar -->
@@ -168,7 +171,7 @@
     <script>
         $.widget.bridge('uibutton', $.ui.button)
     </script>
-    <script src=".../../../AdminLTE-master/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../../AdminLTE-master/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../../../AdminLTE-master/plugins/chart.js/Chart.min.js"></script>
     <script src="../../../AdminLTE-master/plugins/sparklines/sparkline.js"></script>
     <script src="../../..//AdminLTE-master/plugins/jqvmap/jquery.vmap.min.js"></script>
