--- a/views/STP listings/listReadings.ejs
+++ b/views/STP listings/listReadings.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,17 +35,16 @@
                     <datalist id="names">
                     </datalist>
                 </div>
-                <div class="col-md-4"> Идентификационен код <input id="clientID" name="clientID" class="ml-2" list="idList"
-                        type="search"></input>
+                <div class="col-md-4"> Идентификационен код <input id="clientID" name="clientID" class="ml-2"
+                        list="idList" type="search"></input>
                     <datalist id="idList">
                     </datalist>
                 </div>
                 <div class="col-md-4"><button type="submit" class="btn-primary btn-lg ml-3">Търсене</button></div>
             </div>
-
-
+        </form>
     </div>
-    </form>
+    
     <table id="list-readings" class="display">
         <thead>
             <tr>
