--- a/views/hour-readings/listHourReadingsTable.ejs
+++ b/views/hour-readings/listHourReadingsTable.ejs
@@ -25,21 +25,44 @@
 </head>
 
 <body>
-    <h1 class="text-center mb-5">Клиенти - по часови</h1>
+    <h1 class="text-center mb-5">Мерения - по часови</h1>
+
+    <form action="" method="GET">
+        <div class="row">
+            <div class="col-md-4"> Дата <input id="date" name="date" class="ml-2" type="date" type="search"></input>
+            </div>
+            <div class="col-md-4">Име на клиент <input id="nameOfClient" list="names" name="name" class="ml-2"
+                    type="search"></input>
+                <datalist id="names">
+                </datalist>
+            </div>
+        </div>
+        <div class="row mt-3 justify-content-center">
+            <div class="col-md-6"> Идентификационен код <input id="clientID" name="clientID" class="ml-2" list="idList"
+                    type="search"></input>
+                <datalist id="idList">
+                </datalist>
+            </div>
+            <div class="col-md-4"><button type="submit" class="btn-primary btn-lg ml-3">Търсене</button></div>
+        </div>
+    </form>
+
     <div class="container clients text-center mb-5">
-        <table id="clients" class="display">
+        <table id="hour-readings-table" class="display">
             <thead>
                 <tr>
-                    <th>ID на клиент</th>
-                    <th>Идентификационен код</th>
+                    <th>ID на мерене</th>
+                    <th>Идентификационен код на клиент</th>
                     <th>Име на клиент</th>
+                    <th>Дата на мерене</th>
+                    <th>Детайли на мерене</th>
                 </tr>
             </thead>
             <tbody id="tBody">
             </tbody>
         </table>
     </div>
-    <script src="../../../../js/hour-readings/listClients.js"></script>
+    <script src="../../../../js/hour-readings/listHourReadingsTable.js"></script>
 </body>
 
 </html>
