--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -41,129 +41,141 @@
 
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
-        <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-            <!-- Left navbar links -->
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-                </li>
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a href="" class="nav-link">Home</a>
-                </li>
-            </ul>
-            <!-- SEARCH FORM -->
-            <form class="form-inline ml-3">
-                <div class="input-group input-group-sm">
-                    <input class="form-control form-control-navbar" type="search" placeholder="Search"
-                        aria-label="Search">
-                    <div class="input-group-append">
-                        <button class="btn btn-navbar" type="submit">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
-                </div>
-            </form>
-
-            <a href="/users/logout" class="btn-lg ml-3 btn-danger">Logout</a>
-
-            <aside class="main-sidebar sidebar-dark-primary elevation-4">
-                <!-- Brand Logo -->
-                <a href="" class="brand-link">
-                    <img src="../../../AdminLTE-master/images/logoDatavend.png" alt="AdminLTE Logo"
-                        class="brand-image img-circle elevation-3" style="opacity: .8">
-                    <span class="brand-text font-weight-light">Graph Project</span>
-                </a>
-
-                <!-- Sidebar -->
-                <div class="sidebar">
-                    <!-- Sidebar user panel (optional) -->
-                    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                        <div class="info">
-                            <a href="#" class="d-block"><%=name%></a>
+        <div class="row">
+            <!-- Navbar -->
+            <div class="col-md-3">
+                <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+                    <!-- Left navbar links -->
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+                        </li>
+                        <li class="nav-item d-none d-sm-inline-block">
+                            <a href="/dashboard" class="nav-link">Home</a>
+                        </li>
+                    </ul>
+            </div>
+            <div class="col-md-6 mt-3">
+                <!-- SEARCH FORM -->
+                <form class="form-inline ml-3">
+                    <div class="input-group input-group-sm">
+                        <input class="form-control form-control-navbar" type="search" placeholder="Search"
+                            aria-label="Search">
+                        <div class="input-group-append">
+                            <button class="btn btn-navbar" type="submit">
+                                <i class="fas fa-search"></i>
+                            </button>
                         </div>
                     </div>
+                </form>
+            </div>
+            <div class="col-md-3 mt-3">
+                <a href="/users/logout" class="btn-lg ml-3 btn-danger">Logout</a>
+            </div>
+        </div>
+        <aside class="main-sidebar sidebar-dark-primary elevation-4">
+            <!-- Brand Logo -->
+            <a href="" class="brand-link">
+                <img src="../../../AdminLTE-master/images/logoDatavend.png" alt="AdminLTE Logo"
+                    class="brand-image img-circle elevation-3" style="opacity: .8">
+                <span class="brand-text font-weight-light">Graph Project</span>
+            </a>
 
-                    <!-- Sidebar Menu -->
-                    <nav class="mt-2">
-                        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
-                            data-accordion="false">
-                            <!-- Add icons to the links using the .nav-icon class
+            <!-- Sidebar -->
+            <div class="sidebar">
+                <!-- Sidebar user panel (optional) -->
+                <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                    <div class="info">
+                        <a href="#" class="d-block"><%=name%></a>
+                    </div>
+                </div>
+
+                <!-- Sidebar Menu -->
+                <nav class="mt-2">
+                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
+                        data-accordion="false">
+                        <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-                            <li class="nav-item has-treeview">
-                                <a href="#" class="nav-link">
-                                    <i class="nav-icon fas fa-edit"></i>
-                                    <p>
-                                        Импорт на данни
-                                        <i class="fas fa-angle-left right"></i>
-                                    </p>
-                                </a>
-                                <ul class="nav nav-treeview">
-                                    <li class="nav-item">
-                                        <a href="/users/import/STP/Readings" class="nav-link">
-                                            <i class="far fa-circle nav-icon"></i>
-                                            <p>СТП</p>
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
-                                    <li class="nav-item has-treeview">
-                                        <a href="#" class="nav-link">
-                                            <i class="fas fa-clock"></i>
-                                            <p>
-                                                Мерения по часове
-                                                <i class="fas fa-angle-left right"></i>
-                                            </p>
-                                        </a>
-                                        <ul class="nav nav-treeview">
-                                            <li class="nav-item">
-                                                <a href="/users/import/hour-readings/CEZ" class="nav-link">
-                                                    <i class="far fa-circle nav-icon"></i>
-                                                    <p>CEZ</p>
-                                                </a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="/users/import/hour-readings/evnORenergoPRO" class="nav-link">
-                                                    <i class="far fa-circle nav-icon"></i>
-                                                    <p>EVN / EnergoPRO</p>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                            </li>
-                        </ul>
-                        </li>
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-table"></i>
+                                <i class="nav-icon fas fa-edit"></i>
                                 <p>
-                                    Таблици
+                                    Импорт на данни
                                     <i class="fas fa-angle-left right"></i>
                                 </p>
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="/users/listReadings" class="nav-link">
+                                    <a href="/users/import/STP/Readings" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>СТП</p>
                                     </a>
                                 </li>
-                            </ul>
+                                <li class="nav-item">
+                                <li class="nav-item has-treeview">
+                                    <a href="#" class="nav-link">
+                                        <i class="fas fa-clock"></i>
+                                        <p>
+                                            Мерения по часове
+                                            <i class="fas fa-angle-left right"></i>
+                                        </p>
+                                    </a>
+                                    <ul class="nav nav-treeview">
+                                        <li class="nav-item">
+                                            <a href="/users/import/hour-readings/CEZ" class="nav-link">
+                                                <i class="far fa-circle nav-icon"></i>
+                                                <p>CEZ</p>
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="/users/import/hour-readings/evnORenergoPRO" class="nav-link">
+                                                <i class="far fa-circle nav-icon"></i>
+                                                <p>EVN / EnergoPRO</p>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
                         </li>
-                        <li class="nav-item"> <a href="/users/listClients" class="nav-link">
-                                <i class="fas fa-users"></i>
-                                <p class="ml-2">Клиенти</p>
-                            </a>
-                        </li>
+                    </ul>
+                    </li>
+                    <li class="nav-item has-treeview">
+                        <a href="#" class="nav-link">
+                            <i class="nav-icon fas fa-table"></i>
+                            <p>
+                                Таблици
+                                <i class="fas fa-angle-left right"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a href="/users/listReadings" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>СТП</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="/users/listHourReadings" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Мерения по часове</p>
+                                </a>
+                            </li>
                         </ul>
-                    </nav>
-                    <!-- /.sidebar-menu -->
-                </div>
-                <!-- /.sidebar -->
-            </aside>
+                    </li>
+                    <li class="nav-item"> <a href="/users/listClients" class="nav-link">
+                            <i class="fas fa-users"></i>
+                            <p class="ml-2">Клиенти - по часови</p>
+                        </a>
+                    </li>
+                    </ul>
+                </nav>
+                <!-- /.sidebar-menu -->
+            </div>
+            <!-- /.sidebar -->
+        </aside>
     </div>
 
 
-    <div class="container">
+    <div class="container mt-3">
         <%- body %>
     </div>
 
