--- a/views/hour-readings/hour-readings-daily.ejs
+++ b/views/hour-readings/hour-readings-daily.ejs
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src='http://fullcalendar.io/js/fullcalendar-2.1.1/lib/moment.min.js'></script>
+    <script src="http://fullcalendar.io/js/fullcalendar-2.1.1/lib/jquery-ui.custom.min.js"></script>
+    <script src='http://fullcalendar.io/js/fullcalendar-2.1.1/fullcalendar.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
@@ -17,14 +18,13 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-    <link href='../../../AdminLTE-master/plugins/fullcalendar/main.css' rel='stylesheet' />
-    <link href='../../../AdminLTE-master/plugins/fullcalendar-daygrid/main.css' rel='stylesheet' />
-    <link href='../../../AdminLTE-master/plugins/fullcalendar-timegrid/main.css' rel='stylesheet' />
-
-    <script src='../../../AdminLTE-master/plugins/fullcalendar/main.js'></script>
-    <script src='../../../AdminLTE-master/plugins/fullcalendar-daygrid/main.js'></script>
-    <script src="../../../AdminLTE-master/plugins/fullcalendar-timegrid/main.js"></script>
-    <link rel="stylesheet" href="../../../AdminLTE-master/css/custom-calendar.css">
+    <link href='../../../../../AdminLTE-master/plugins/fullcalendar/main.css' rel='stylesheet' />
+    <link href='../../../../../AdminLTE-master/plugins/fullcalendar-daygrid/main.css' rel='stylesheet' />
+    <link href='../../../../../AdminLTE-master/plugins/fullcalendar-timegrid/main.css' rel='stylesheet' />
+    <script src='../../../../../AdminLTE-master/plugins/fullcalendar/main.js'></script>
+    <script src='../../../../../AdminLTE-master/plugins/fullcalendar-daygrid/main.js'></script>
+    <script src="../../../../../../AdminLTE-master/plugins/fullcalendar-timegrid/main.js"></script>
+    <link rel="stylesheet" href="../../../../../AdminLTE-master/css/custom-calendar.css">
     <title>Document</title>
 </head>
 
@@ -42,7 +42,7 @@
             </ul>
         </div>
     </div>
-    <script src="../../../../js/hour-readings/clients-hour-readings.js">
+    <script src="../../../../js/hour-readings/hour-readings-daily.js">
     </script>
 </body>
 
