--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,33 +10,33 @@
     <!-- Font Awesome -->
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../../css/bootstrap.css">
+    <link rel="stylesheet" href="../../../../css/bootstrap.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../../../AdminLTE-master/plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="../../../../AdminLTE-master/plugins/fontawesome-free/css/all.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Tempusdominus Bbootstrap 4 -->
     <link rel="stylesheet"
-        href="../../../AdminLTE-master/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+        href="../../../../AdminLTE-master/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
     <!-- iCheck -->
-    <link rel="stylesheet" href="../../../AdminLTE-master/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+    <link rel="stylesheet" href="../../../../AdminLTE-master/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
     <!-- JQVMap -->
-    <link rel="stylesheet" href="../../../AdminLTE-master/plugins/jqvmap/jqvmap.min.css">
+    <link rel="stylesheet" href="../../../../AdminLTE-master/plugins/jqvmap/jqvmap.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="../../../AdminLTE-master/dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="../../../../AdminLTE-master/dist/css/adminlte.min.css">
     <!-- overlayScrollbars -->
-    <link rel="stylesheet" href="../../../AdminLTE-master/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+    <link rel="stylesheet" href="../../../../AdminLTE-master/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
     <!-- Daterange picker -->
-    <link rel="stylesheet" href="../../../AdminLTE-master/plugins/daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="../../../../AdminLTE-master/plugins/daterangepicker/daterangepicker.css">
     <!-- summernote -->
-    <link rel="stylesheet" href="../../../AdminLTE-master/plugins/summernote/summernote-bs4.css">
+    <link rel="stylesheet" href="../../../../AdminLTE-master/plugins/summernote/summernote-bs4.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-    <link rel="stylesheet" href="../../../AdminLTE-master/css/layout.css">
+    <link rel="stylesheet" href="../../../../AdminLTE-master/css/layout.css">
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -76,7 +76,7 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="" class="brand-link">
-                <img src="../../../AdminLTE-master/images/logoDatavend.png" alt="AdminLTE Logo"
+                <img src="../../../../AdminLTE-master/images/logoDatavend.png" alt="AdminLTE Logo"
                     class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">Graph Project</span>
             </a>
@@ -179,25 +179,25 @@
         <%- body %>
     </div>
 
-    <script src="../../../AdminLTE-master/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <script src="../../../../AdminLTE-master/plugins/jquery-ui/jquery-ui.min.js"></script>
     <script>
         $.widget.bridge('uibutton', $.ui.button)
     </script>
-    <script src="../../../AdminLTE-master/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../../../AdminLTE-master/plugins/chart.js/Chart.min.js"></script>
-    <script src="../../../AdminLTE-master/plugins/sparklines/sparkline.js"></script>
-    <script src="../../..//AdminLTE-master/plugins/jqvmap/jquery.vmap.min.js"></script>
-    <script src="../../../AdminLTE-master/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-    <script src="../../../AdminLTE-master/plugins/jquery-knob/jquery.knob.min.js"></script>
-    <script src="../../../AdminLTE-master/plugins/moment/moment.min.js"></script>
-    <script src="../../../AdminLTE-master/plugins/daterangepicker/daterangepicker.js"></script>
-    <script src="../../../AdminLTE-master/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js">
+    <script src="../../../../AdminLTE-master/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../../../AdminLTE-master/plugins/chart.js/Chart.min.js"></script>
+    <script src="../../../../AdminLTE-master/plugins/sparklines/sparkline.js"></script>
+    <script src="../../../../AdminLTE-master/plugins/jqvmap/jquery.vmap.min.js"></script>
+    <script src="../../../../AdminLTE-master/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+    <script src="../../../../AdminLTE-master/plugins/jquery-knob/jquery.knob.min.js"></script>
+    <script src="../../../../AdminLTE-master/plugins/moment/moment.min.js"></script>
+    <script src="../../../../AdminLTE-master/plugins/daterangepicker/daterangepicker.js"></script>
+    <script src="../../../../AdminLTE-master/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js">
     </script>
-    <script src="../../../AdminLTE-master/plugins/summernote/summernote-bs4.min.js"></script>
-    <script src="../../../AdminLTE-master/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-    <script src="../../../AdminLTE-master/dist/js/adminlte.js"></script>
-    <script src="../../../AdminLTE-master/dist/js/pages/dashboard.js"></script>
-    <script src="../../../AdminLTE-master/dist/js/demo.js"></script>
+    <script src="../../../../AdminLTE-master/plugins/summernote/summernote-bs4.min.js"></script>
+    <script src="../../../../AdminLTE-master/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+    <script src="../../../../AdminLTE-master/dist/js/adminlte.js"></script>
+    <script src="../../../../AdminLTE-master/dist/js/pages/dashboard.js"></script>
+    <script src="../../../../AdminLTE-master/dist/js/demo.js"></script>
 </body>
 
 </html>
