--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -136,6 +136,18 @@
                                     </ul>
                                 </li>
                         </li>
+                        <li class="nav-item">
+                            <a href="/users/import/profiles" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Профили</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/users/import/graphs" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Графици</p>
+                            </a>
+                        </li>
                     </ul>
                     </li>
                     <li class="nav-item has-treeview">
