--- a/views/imports/importSTP-Predictions.ejs
+++ b/views/imports/importSTP-Predictions.ejs
@@ -24,6 +24,7 @@
 <body>
     <div class="container">
         <h1 class="text-center">Избери компания</h1>
+        <h2 class="text-center my-3">Форматирай клетките за дата във формат - "мм.гггг"</h2>
         <label class="container">EVN
             <input type="radio" id="evn" name="radio">
             <span class="checkmark"></span>
@@ -44,7 +45,7 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
-        <script src="../../../../js/imports/index.js"></script>
+        <script src="../../../../js/imports/STP-predictions.js"></script>
     </body>
 
 </html>
