--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -113,6 +113,12 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a href="/users/import/STP/HourPredictions" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>СТП прогнози</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                 <li class="nav-item has-treeview">
                                     <a href="#" class="nav-link">
                                         <i class="fas fa-clock"></i>
