--- a/views/imports/graphs.ejs
+++ b/views/imports/graphs.ejs
@@ -23,6 +23,7 @@
 
 <body>
     <div class="container">
+        <h2 class="text-center">Промени името на документа с желана дата във формат <br/>"дд-мм-гггг"</h2>
         <h1 class="text-center">Избери компания</h1>
         <label class="container">EVN
             <input type="radio" id="evn" name="radio">
