--- a/views/imports/importSTP.ejs
+++ b/views/imports/importSTP.ejs
@@ -44,7 +44,7 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
-        <script src="../../../../js/imports/index.js"></script>
+        <script src="../../../../js/imports/importSTP.js"></script>
     </body>
 
 </html>
