--- a/views/imports/importSTP-Predictions.ejs
+++ b/views/imports/importSTP-Predictions.ejs
@@ -24,7 +24,7 @@
 <body>
     <div class="container">
         <h1 class="text-center">Избери компания</h1>
-        <h2 class="text-center my-3">Форматирай клетките за дата във формат - "мм.гггг"</h2>
+        <h2 class="text-center my-3">Форматирай клетките за дата във формат - "мм.гг"</h2>
         <label class="container">EVN
             <input type="radio" id="evn" name="radio">
             <span class="checkmark"></span>
