--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -180,11 +180,16 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"> <a href="/users/listClients" class="nav-link">
+                    <li class="nav-item"> <a href="/users/listClients-hours" class="nav-link">
                             <i class="fas fa-users"></i>
                             <p class="ml-2">Клиенти - по часови</p>
                         </a>
                     </li>
+                    <li class="nav-item"> <a href="/users/listClients-STP" class="nav-link">
+                        <i class="fas fa-users"></i>
+                        <p class="ml-2">Клиенти - по СТП</p>
+                    </a>
+                </li>
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
