--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -190,6 +190,11 @@
                             <p class="ml-2">Клиенти - по СТП</p>
                         </a>
                     </li>
+                    <li class="nav-item"> <a href="/users/graphs/STP" class="nav-link">
+                        <i class="fas fa-signal"></i>
+                            <p class="ml-2">Графици - по СТП</p>
+                        </a>
+                    </li>
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
