--- a/views/imports/importSTP.ejs
+++ b/views/imports/importSTP.ejs
@@ -42,6 +42,7 @@
         <div class="form-group" id="input-excel">
             <label for="exampleFormControlTextarea1">Example textarea</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <i class="fas fa-upload"></i>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
         <script src="../../../../js/imports/importSTP.js"></script>
