--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -169,12 +169,6 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="/users/listReadings" class="nav-link">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>СТП</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
                                 <a href="/users/listHourReadings" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Мерения по часове</p>
@@ -196,6 +190,51 @@
                             <i class="fas fa-signal"></i>
                             <p class="ml-2">Графици - по СТП</p>
                         </a>
+                    </li>
+                    <li class="nav-item"> <a href="/users/clients" class="nav-link">
+                            <i class="fas fa-users"></i>
+                            <p class="ml-2">Клиенти</p>
+                        </a>
+                    </li>
+                    <li class="nav-item has-treeview">
+                        <a href="#" class="nav-link">
+                            <i class="fas fa-file-alt"></i>
+                            <p>
+                                Мерене
+                                <i class="fas fa-angle-left right"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a href="/users/listReadings" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>СТП</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="/users/listHourReadings" class="nav-link">
+                                    <i class="fas fa-clock"></i>
+                                    <p>По часови</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item has-treeview">
+                        <a href="#" class="nav-link">
+                            <i class="fas fa-file-invoice"></i>
+                            <p>
+                                Фактуриране
+                                <i class="fas fa-angle-left right"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a href="/users/listReadings" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>СТП</p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="nav-item"> <a href="/users/inquiry" class="nav-link">
                             <i class="fas fa-file-export"></i>
@@ -234,6 +273,7 @@
     <script src="../../../../AdminLTE-master/dist/js/adminlte.js"></script>
     <script src="../../../../AdminLTE-master/dist/js/pages/dashboard.js"></script>
     <script src="../../../../AdminLTE-master/dist/js/demo.js"></script>
+    <script src="../../../../js/menu/admin-lte-menu.js"></script>
 </body>
 
 </html>
