--- a/views/imports/hour_readingsMultiImport.ejs
+++ b/views/imports/hour_readingsMultiImport.ejs
@@ -36,6 +36,7 @@
     <div class="form-group" id="input-excel">
         <label for="exampleFormControlTextarea1"></label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <i class="fas fa-upload"></i>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
